--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,5 +8,6 @@
         <div class="container">
             <h1>Welcome to my site!</h1>
         </div>
+        <%- include('../partials/footer.ejs') %>
     </body>
 </html>
