Using Tailwind instead of Bootstrap, added basic views for projects

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,4 @@
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!-- Tailwind CSS -->
+<link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css">
 <!-- Custom CSS -->
-<link rel="stylesheet" href="files/style.css"
+<link rel="stylesheet" href="/files/style.css"
