--- a/files/style.css
+++ b/files/style.css
@@ -1,3 +1,28 @@
+
+
+h1 {
+    font-size: xx-large;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    display: flex;
+    flex: 2 0 auto;
+}
+
+.footer {
+    position:absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem
+}
+
 .footer-item {
-    padding: 1rem
+    align-self: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
