--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,9 +5,23 @@
         <%- include('../partials/head.ejs') %>
     </head>
     <body>
-        <div class="container">
-            <h1>Welcome to my site!</h1>
+        <div class="flex flex-col  justify-center space-y-20 ">
+            <div class="m-16 flex flex-col items-center">
+                <h1 class="text-blue-400">Welcome to my site!</h1>
+                <p>I'm Sam. I'm a senior studying Computer Science at Worcester Polytechnic Institute.</p>
+            </div>
+            <!-- Projects -->
+            <div class="flex flex-col items-center space-y-6">
+                <h1>Projects</h1>
+
+                <div class="flex flex-row items-start space-x-20 ">
+                    <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/Example%20Project'">Here is a project!</div>
+                    <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/Example%20Project'">Here is a project!</div>
+                    <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/Example%20Project'">Here is a project!</div>
+                </div>
+            </div>
         </div>
+
         <%- include('../partials/footer.ejs') %>
     </body>
 </html>
