--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,5 @@
-<div class="card-footer fixed-bottom">
-    <div class="container text-center">
-        <a class="footer-item" href="https://github.com/sdmoran">GitHub</a>
-        <a class="footer-item" href="files/resume.pdf"s>Résumé</a>
-    </div>
+<div class="footer flex justify-center">
+    <a class="footer-item" href="https://github.com/sdmoran">GitHub</a>
+    <a class="footer-item" href="https://www.linkedin.com/in/sdmoran"s>Linkedin</a>
+    <a class="footer-item" href="files/resume.pdf"s>Résumé</a>
 </div>
