--- a/views/pages/project_error.ejs
+++ b/views/pages/project_error.ejs
@@ -7,9 +7,8 @@
     <body>
         <div class="flex flex-col  justify-center space-y-20 ">
             <div class="m-16 flex flex-col items-center">
-                <h1 class="text-blue-400"><%= name %></h1>
-                <p><%= blurb %></p>
-                <img src="/files/images/<%= images[0] %>">
+                <h1 class="text-blue-400">Uh oh!</h1>
+                <a href="/"><p class="text-blue-500">That project wasn't found. Click here to go back!</p></a>
             </div>
         </div>
     </body>
