--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,17 @@
 <!-- Tailwind CSS -->
-<link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css">
+<link rel="stylesheet" href="/files/tailwind.css">
 <!-- Custom CSS -->
-<link rel="stylesheet" href="/files/style.css"
+<link rel="stylesheet" href="/files/style.css">
+
+<div class="bg-amber-300 p-5">
+    <nav class="flex justify-between">
+        <ul class="flex flex-row">
+            <li class="pr-5"><a href="/">Home</a></li>
+            <li class="pr-5"><a href="/projects/all">Projects</a></li>
+            <li class="pr-5"><a href="https://github.com/sdmoran">GitHub</a></li>
+            <li class="pr-5"><a href="https://www.linkedin.com/in/sdmoran">Linkedin</a></li>
+            <li class="pr-5"><a href="/files/resume.pdf">Résumé</a></li>
+            <li class="pr-5"><a>Contact</a></li>
+        </ul>
+    </nav>
+</div>
