Fix CSS (?) and improvements to project

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,9 +15,12 @@
                 <h1>Projects</h1>
 
                 <div class="flex flex-row items-start space-x-20 ">
-                    <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/Example%20Project'">Here is a project!</div>
-                    <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/Example%20Project'">Here is a project!</div>
-                    <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/Example%20Project'">Here is a project!</div>
+                    
+                    <% projects.forEach(function(project, index){ %>
+                        <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/<%= project.name %>'"><%= project.name %></div>
+                    <% })%>
+                    <!-- <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/Example%20Project'">Here is a project!</div> -->
+                    <!-- <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/projects/Example%20Project'">Here is a project!</div> -->
                 </div>
             </div>
         </div>
