--- a/files/tailwind.css
+++ b/files/tailwind.css
@@ -1,3 +1,34 @@
+h1 {
+  font-size: xx-large;
+}
+
+.border {
+  width: 2px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  flex: 2 0 auto;
+}
+
+.footer {
+  position:absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem
+}
+
+.footer-item {
+  align-self: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
 /*
@@ -183886,4 +183917,3 @@ video {
             animation: bounce 1s infinite;
   }
 }
-  
