--- a/views/admin/add_project.ejs
+++ b/views/admin/add_project.ejs
@@ -2,17 +2,102 @@
 <html>
     <head>
         <title>smoran.dev</title>
-        <%- include('../partials/head.ejs') %>
+        <%- include('../partials/admin_head.ejs') %>
     </head>
     <body>
-        <div class="flex flex-col  justify-center space-y-20 ">
+        <div class="flex flex-col justify-center space-y-20 ">
             <div class="m-16 flex flex-col items-center">
                 <h1 class="text-blue-400">Add Project</h1>
-                <form class="flex flex-wrap items-start justify-between md:space-x-10 sm:space-x-0">
-                    <input id="name" type="text" placeholder="Project Name" class="border-2 border-gray-200 rounded-md py-3 px-4 my-1">
-                    <input id="blurb" type="text" placeholder="Project Blurb" class="border-2 border-gray-200 rounded-md py-3 px-4 my-1">
+                <form class="flex flex-col" action="/admin/add_project" method="POST">
+
+                    <label for="name">Project Name</label>
+                    <input id="name" name="name" type="text" placeholder="Project Name" class="flex-grow border-2 border-gray-300 rounded-md py-3 px-4 my-1">
+                    
+                    <label for="blurb">Project Blurb</label>
+                    <textarea id="blurb" name="blurb" type="text" placeholder="Project Blurb" class="resize border-2 border-gray-300 rounded-md py-3 px-4 my-1"></textarea>
+                    
+                    <label for="class">Class</label>
+                    <input id="class" name="class" type="text" placeholder="Class (if any)" class="flex-grow border-2 border-gray-300 rounded-md py-3 px-4 my-1">
+                   
+                    <div id="paragraphs" class="flex flex-col">
+                        <label for="paragraphInputs">Project Description</label>
+                        <div id="paragraphInputs" class="flex flex-col">
+                            <textarea id="paragraph1" name="paragraph1" type="text" placeholder="Paragraph 1" class="resize border-2 border-gray-300 rounded-md py-3 px-4 my-1"></textarea>
+                        </div>
+                        <button type="button" class="items-center text-center rounded-md bg-blue-300" onclick="addParagraphField()">Add Paragraph</button>
+                    </div>
+                    
+                    <label for="technologies">Technologies</label>
+                    <textarea id="technologies" name="technologies" type="text" placeholder="Technologies" class="resize border-2 border-gray-300 rounded-md py-3 px-4 my-1"></textarea>
+                    
+                    <label for="images">Images</label>
+                    <div class="border-2 border-gray-300 rounded-md py-3 px-4 my-1">
+                        <input type="file" id="image" name="image" placeholder="Image">
+                    </div>
+                    
+                    <button type="button" class="items-center text-center rounded-md bg-blue-300" onclick="submitForm()">Submit</button>
                 </form>
             </div>
         </div>
-    </body> 
+    </body>
+
+    <script>
+        let paragraphs = 1;
+
+        function addParagraphField() {
+            paragraphs += 1;
+            const div = document.getElementById("paragraphInputs");
+            const newElt = document.createElement('textarea');
+            newElt.id = "paragraph" + paragraphs;
+            newElt.name = "paragraph" + paragraphs;
+            newElt.type = "text";
+            newElt.placeholder = "Paragraph " + paragraphs;
+            let classes = ["resize", "border-2", "border-gray-300", "rounded-md", "py-3", "px-4", "my-1"];
+            for(let i = 0; i < classes.length; i++) {
+                newElt.classList.add(classes[i]);
+            }
+            div.appendChild(newElt);
+        }
+
+        function submitForm() {
+            const name = document.getElementById("name").value;
+            const blurb = document.getElementById("blurb").value;
+            const paragraphNodes = document.getElementById("paragraphInputs").children;
+            const paragraphs = [];
+            for(let i = 0; i < paragraphNodes.length; i++) {
+                let contents = paragraphNodes[i].value;
+                if(contents) {
+                    paragraphs.push(contents);
+                }
+            }            
+            const technologies = document.getElementById("technologies").value;
+            const classIfAny = document.getElementById("class").value;
+
+            let project = {
+                name,
+                blurb,
+                paragraphs,
+                technologies,
+            }
+
+            if(classIfAny) {
+                project.class = classIfAny;
+            }
+
+            console.log(project);
+
+            const url = "/admin/add_project";
+
+            fetch(url, {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({ project })
+            })
+            .then(resp => {
+                console.log(resp)
+            })
+        }
+    </script>
 </html>
