--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -2,13 +2,14 @@
 <html>
     <head>
         <title>smoran.dev</title>
-        <%- include('../partials/head.ejs') %>
+        <%- include('../partials/admin_head.ejs') %>
     </head>
     <body>
         <div class="flex flex-col  justify-center space-y-20 ">
             <div class="m-16 flex flex-col items-center">
                 <h1 class="text-blue-400">Admin Dashboard</h1>
-                <div class="w-48 h-16  items-center text-center rounded-md bg-blue-300" onclick="location.href = '/admin/add'">Add Project</div>
+                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300" onclick="location.href = '/admin/add_project'">Add Project</div>
+                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300" onclick="location.href = '/admin/all_projects'">All Projects</div>
             </div>
         </div>
     </body>
