--- a/views/pages/project.ejs
+++ b/views/pages/project.ejs
@@ -9,7 +9,7 @@
             <div class="m-16 flex flex-col items-center">
                 <h1 class="text-blue-400"><%= name %></h1>
                 <p><%= blurb %></p>
-                <img src="/files/images/<%= images[0] %>">
+                <img src="<%= images[0] %>">
             </div>
         </div>
     </body>
