--- a/views/pages/project_home.ejs
+++ b/views/pages/project_home.ejs
@@ -16,18 +16,16 @@
 
                         <div class="p-5">
                             <!-- Projects -->
-                            <div class="flex flex-row overflow-hidden rounded-lg shadow-lg">
-
                             <% if(Math.random() > 0.5)  { %>
-
-                                <a href="#" class="flex">
+                                <div class="flex flex-row overflow-hidden rounded-lg shadow-lg">
+                                <a href="/projects/<%= project.name%>" class="flex">
                                     <img alt="Placeholder" class="block h-auto w-full" src="https://picsum.photos/600/400/?random">
                                 </a>
 
                                 <div class="flex items-center justify-between leading-tight p-2 md:p-4">
                                     <div>
                                         <h1 class="text-lg">
-                                            <a class="no-underline hover:underline text-black" href="#">
+                                            <a class="no-underline hover:underline text-black" href="/projects/<%= project.name%>">
                                                 <%= project.name %>
                                             </a>
                                         </h1>
@@ -36,10 +34,11 @@
                                 </div>
 
                                 <% } else { %>
+                                    <div class="flex justify-between overflow-hidden rounded-lg shadow-lg">
                                     <div class="flex items-center justify-between leading-tight p-2 md:p-4">
                                         <div>
                                             <h1 class="text-lg">
-                                                <a class="no-underline hover:underline text-black" href="#">
+                                                <a class="no-underline hover:underline text-black" href="/projects/<%= project.name%>">
                                                     <%= project.name %>
                                                 </a>
                                             </h1>
@@ -47,7 +46,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="#" class="flex">
+                                    <a href="#" class="/projects/<%= project.name%>">
                                         <img alt="Placeholder" class="block h-auto w-full" src="https://picsum.photos/600/400/?random">
                                     </a>
                                 <% } %>
