Projects on index page now limited to 3 randomly chosen ones; minor CSS tweaks

--- a/views/admin/all_projects.ejs
+++ b/views/admin/all_projects.ejs
@@ -5,7 +5,7 @@
         <%- include('../partials/admin_head.ejs') %>
     </head>
     <body>
-        <div class="flex flex-col  justify-center space-y-20 ">
+        <div class="flex flex-col  justify-center">
             <div class="m-16 flex flex-col items-center">
                 <h1 class="text-blue-400">Projects</h1>
                 <div class="flex flex-col justify-between">
@@ -14,7 +14,7 @@
                         <div class="p-5">
                             <!-- Projects -->
                             <div class="flex flex-row overflow-hidden rounded-lg shadow-lg">
-                                <div class="flex items-center justify-between leading-tight p-2 md:p-4">
+                                <div class="flex items-center justify-between leading-tight p-4">
                                     <div>
                                         <h1 class="text-lg">
                                             <a class="no-underline hover:underline text-black" href="#">
