--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -5,12 +5,10 @@
         <%- include('../partials/admin_head.ejs') %>
     </head>
     <body>
-        <div class="flex flex-col  justify-center space-y-20 ">
-            <div class="m-16 flex flex-col items-center">
+            <div class="m-16 flex flex-col items-center space-y-8">
                 <h1 class="text-blue-400">Admin Dashboard</h1>
-                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300" onclick="location.href = '/admin/add_project'">Add Project</div>
-                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300" onclick="location.href = '/admin/all_projects'">All Projects</div>
+                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300 p-5" onclick="location.href = '/admin/add_project'">Add Project</div>
+                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300 p-5" onclick="location.href = '/admin/all_projects'">All Projects</div>
             </div>
-        </div>
     </body>
 </html>
