--- a/views/admin/all_projects.ejs
+++ b/views/admin/all_projects.ejs
@@ -10,10 +10,9 @@
                 <h1 class="text-blue-400">Projects</h1>
                 <div class="flex flex-col justify-between">
                     <% projects.forEach(function(project, index){ %>
-
                         <div class="p-5">
                             <!-- Projects -->
-                            <div class="flex flex-row overflow-hidden rounded-lg shadow-lg">
+                            <div class="flex flex-row overflow-hidden rounded-lg shadow-lg justify-items-end">
                                 <div class="flex items-center justify-between leading-tight p-4">
                                     <div>
                                         <h1 class="text-lg">
@@ -23,6 +22,10 @@
                                         </h1>
                                         <p class="text-gray-700"><%= project.blurb %></p>
                                     </div>
+                                </div>
+                                <div class="flex flex-grow items-end p-2">
+                                    <a class="p-3 bg-purple-300" href="/admin/projects/edit/<%= project._id %>">Edit</a>
+                                    <a class="p-3 bg-red-500">Delete</a>
                                 </div>
                             </div>                        
                         </div>
