Added ability to delete projects

--- a/views/admin/add_project.ejs
+++ b/views/admin/add_project.ejs
@@ -125,6 +125,7 @@
             })
             .then(resp => {
                 console.log(resp)
+                window.location.href = "/admin/all_projects"
             })
         }
     </script>
