--- a/views/admin/all_projects.ejs
+++ b/views/admin/all_projects.ejs
@@ -25,7 +25,7 @@
                                 </div>
                                 <div class="flex flex-grow items-end p-2">
                                     <a class="p-3 bg-purple-300" href="/admin/projects/edit/<%= project._id %>">Edit</a>
-                                    <a class="p-3 bg-red-500">Delete</a>
+                                    <a class="p-3 bg-red-500" href="#" onclick="deleteProject('<%= project._id %>')">Delete</a>
                                 </div>
                             </div>                        
                         </div>
@@ -33,5 +33,20 @@
                 </div>
             </div>
         </div>
+
+        <script>
+            function deleteProject(id) {
+                const url = "/admin/projects/delete/" + id;
+                fetch(url, 
+                {
+                    method: "POST",
+                })
+                .then( resp => {
+                    if(resp.status == 200) {
+                        window.location.reload();
+                    }
+                })
+            }
+        </script>
     </body>
 </html>
