Added more links for convenience and changed formatting of admin header

--- a/views/partials/admin_head.ejs
+++ b/views/partials/admin_head.ejs
@@ -3,9 +3,12 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="/files/style.css">
 
-<div class="bg-amber-300 p-5">
+<div class="bg-amber-300 p-5 flex flex-row items-center">
+    <p class="text-xs px-3">Admin Panel</p>
     <nav class="flex justify-between">
         <ul class="flex flex-row">
+            <li class="pr-5"><a href="/admin/all_projects">All Projects</a></li>
+            <li class="pr-5"><a href="/admin/add_project">Add Projects</a></li>
             <li class="pr-5"><a href="/">Regular Site</a></li>
         </ul>
     </nav>
