--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,7 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="/files/style.css">
 
-<div class="bg-amber-300 p-5">
+<div class="bg-indigo-400 p-5">
     <nav class="flex justify-between">
         <ul class="flex flex-row">
             <li class="pr-5"><a href="/">Home</a></li>
