Fixed width of content on project pages and other styling tweaks

--- a/views/pages/project.ejs
+++ b/views/pages/project.ejs
@@ -7,20 +7,21 @@
     <body>
         <div class="flex flex-col items-center space-y-2 ">
             <h1 class="text-blue-400 my-12"><%= project.name %></h1>
-            <div class="m-16 flex flex-col justify-items-start max-w-6xl">
+            <div class="m-16 flex flex-col justify-items-start w-4/5 space-y-4">
                 
                 <h2 class="text-blue-400">Description</h2>
                 <p class="py-1"><% project.paragraphs.forEach(function(paragraph, idx) { %>
                     <%= paragraph %>
                 <% }) %></p>
 
-                <!-- Render images -->
-                <% project.images.forEach(function(img, idx) { %>
-                    <img src="<%= img %>" class="max-h-80">
-                <% }) %>
-
                 <h2 class="text-blue-400">Technologies</h2>
                 <p class="py-1"><%= project.technologies %></p>
+
+                <h2 class="text-blue-400">Images</h2>
+                <!-- Render images -->
+                <% project.images.forEach(function(img, idx) { %>
+                    <img src="<%= img %>" class="rounded-md object-left object-contain max-h-80 w-full">
+                <% }) %>
             </div>
         </div>
     </body>
