--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,21 +4,39 @@
         <title>smoran.dev</title>
         <%- include('../partials/head.ejs') %>
     </head>
-    <body>
-        <div class="flex flex-col  justify-center space-y-20 ">
+    <body class="">
+        <div class="flex flex-col  justify-centerspace-y-20">
             <div class="m-16 flex flex-col items-center">
                 <h1 class="text-blue-400">Welcome to my site!</h1>
                 <p>I'm Sam. I'm a senior studying Computer Science at Worcester Polytechnic Institute.</p>
             </div>
             <!-- Projects -->
             <div class="flex flex-col items-center space-y-6">
-                <h1 class="text-blue-400">Projects</h1>
+                <div class="flex flex-col items-center">
+                    <h1 class="text-blue-400">Projects</h1>
+                    <p>Here are some projects that I've worked on in the past. Check them out!</p>
+                </div>
 
-                <div class="flex flex-row items-start space-x-20 ">
-                    
+                <div class="flex flex-row items-start space-x-20 w-4/5">
                     <% for(let i = 0; i < 3; i++) { %>
                         <% project = projects[i] %>
-                        <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300 p-4" onclick="location.href = '/projects/<%= project.name %>'"><%= project.name %></div>
+
+                        <div class="flex flex-col rounded-lg bg-gradient-to-b from-amber-200 to-amber-300 border-l-4 border-b-4 border-red-400 shadow-kg">
+                            <a href="/projects/<%= project.name%>" class="flex">
+                                <img alt="Placeholder" class="block max-h-96" src="<%= project.images[0] %>">
+                            </a>
+
+                            <div class="flex items-center justify-between leading-tight p-2 md:p-4">
+                                <div>
+                                    <h1 class="text-lg">
+                                        <a class="no-underline hover:underline text-black" href="/projects/<%= project.name%>">
+                                            <%= project.name %>
+                                        </a>
+                                    </h1>
+                                    <p class="text-gray-700"><%= project.blurb %></p>
+                                </div>
+                            </div>
+                        </div>
                     <% }%>
                 </div>
             </div>
