--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
         <%- include('../partials/head.ejs') %>
     </head>
     <body class="">
-        <div class="flex flex-col  justify-centerspace-y-20">
+        <div class="flex flex-col  justify-center space-y-20">
             <div class="m-16 flex flex-col items-center">
                 <h1 class="text-blue-400">Welcome to my site!</h1>
                 <p>I'm Sam. I'm a senior studying Computer Science at Worcester Polytechnic Institute.</p>
@@ -17,12 +17,12 @@
                     <p>Here are some projects that I've worked on in the past. Check them out!</p>
                 </div>
 
-                <div class="flex flex-row items-start space-x-20 w-4/5">
+                <div class="flex flex-row justify-center space-x-20 w-4/5" onclick="location.href='/projects/<%= project.name %>'">
                     <% for(let i = 0; i < 3; i++) { %>
                         <% project = projects[i] %>
 
-                        <div class="flex flex-col rounded-lg bg-gradient-to-b from-amber-200 to-amber-300 border-l-4 border-b-4 border-red-400 shadow-kg">
-                            <a href="/projects/<%= project.name%>" class="flex">
+                        <div class="flex flex-col rounded-lg bg-gradient-to-l hover:from-pink-400 hover:to-amber-300 from-blue-400 to-green-400 border-b-2 border-red-600 shadow-kg">
+                            <a href="/projects/<%= project.name %>" class="flex">
                                 <img alt="Placeholder" class="block max-h-96" src="<%= project.images[0] %>">
                             </a>
 
