--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -7,8 +7,8 @@
     <body>
             <div class="m-16 flex flex-col items-center space-y-8">
                 <h1 class="text-blue-400">Admin Dashboard</h1>
-                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300 p-5" onclick="location.href = '/admin/add_project'">Add Project</div>
-                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300 p-5" onclick="location.href = '/admin/all_projects'">All Projects</div>
+                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300 p-5 mousepoint" onclick="location.href = '/admin/add_project'">Add Project</div>
+                <div class="w-48 h-16 items-center text-center rounded-md bg-blue-300 p-5 mousepoint" onclick="location.href = '/admin/all_projects'">All Projects</div>
             </div>
     </body>
 </html>
