--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,11 +17,10 @@
                     <p>Here are some projects that I've worked on in the past. Check them out!</p>
                 </div>
 
-                <div class="flex flex-row justify-center space-x-20 w-4/5" onclick="location.href='/projects/<%= project.name %>'">
+                <div class="flex flex-row justify-center space-x-20 w-4/5" >
                     <% for(let i = 0; i < 3; i++) { %>
                         <% project = projects[i] %>
-
-                        <div class="flex flex-col rounded-lg bg-gradient-to-l hover:from-pink-400 hover:to-amber-300 from-blue-400 to-green-400 border-b-2 border-red-600 shadow-kg">
+                        <div class="flex flex-col rounded-lg bg-gradient-to-l hover:from-pink-400 hover:to-amber-300 from-blue-400 to-green-400 border-b-2 border-red-600 shadow-kg mousepoint" onclick="location.href='/projects/<%= project.name %>'">
                             <a href="/projects/<%= project.name %>" class="flex">
                                 <img alt="Placeholder" class="block max-h-96" src="<%= project.images[0] %>">
                             </a>
