Made add/edit project form wider and fixed new projects not having any paragraph fields added when form first renders

--- a/views/admin/edit_project.ejs
+++ b/views/admin/edit_project.ejs
@@ -9,7 +9,7 @@
             <div class="m-16 flex flex-col items-center">
                 <h1 class="text-blue-400"><%= edit ? "Edit" : "Add"%> Project</h1>
                 <h2 class="text-blue-300"><%= project.name %></h2>
-                <form class="flex flex-col" action="/admin/add_project" method="POST">
+                <form class="flex flex-col w-2/3" action="/admin/add_project" method="POST">
 
                     <label for="name">Project Name</label>
                     <input id="name" name="name" type="text" value="<%= project.name %>" class="flex-grow border-2 border-gray-300 rounded-md py-3 px-4 my-1">
@@ -27,6 +27,9 @@
                                 <% project.paragraphs.forEach(function(paragraph, idx) { %>
                                     <textarea id="paragraph1" name="paragraph1" type="text" class="resize border-2 border-gray-300 rounded-md py-3 px-4 my-1"><%= paragraph %></textarea>
                                 <% }) %>
+                            <!-- If no existing paragraphs, start with at least 1. -->
+                            <% } else { %>
+                                <textarea id="paragraph1" name="paragraph1" type="text" class="resize border-2 border-gray-300 rounded-md py-3 px-4 my-1"></textarea>
                             <% } %>
                         </div>
                         <button type="button" class="items-center text-center rounded-md bg-blue-300" onclick="addParagraphField()">Add Paragraph</button>
